--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-delete-file": "^1.0.2",
+    "gulp-ext-replace": "^0.3.0",
     "gulp-file-include": "^2.3.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
@@ -36,7 +37,7 @@
     "gulp-svgmin": "^4.1.0",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^4.0.1",
-    "gulp-webp": "^4.0.1",
+    "imagemin-webp": "^8.0.0",
     "sass": "^1.59.3",
     "webpack": "^5.76.2",
     "webpack-stream": "^7.0.0"
